--- a/index.html
+++ b/index.html
@@ -2,8 +2,33 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" href="style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tic-Tac-Toe</title>
   </head>
-  <body></body>
+  <body>
+    <div id="container">
+      <div id="playerContainer">
+        <div class="playerCard" id="player1">Player 1</div>
+        <div class="playerCard" id="player2">Player 2</div>
+      </div>
+      <div id="board">
+        <div id="tile1" class="boardTile"></div>
+        <div id="tile2" class="boardTile"></div>
+        <div id="tile3" class="boardTile"></div>
+        <div id="tile4" class="boardTile"></div>
+        <div id="tile5" class="boardTile"></div>
+        <div id="tile6" class="boardTile"></div>
+        <div id="tile7" class="boardTile"></div>
+        <div id="tile8" class="boardTile"></div>
+        <div id="tile9" class="boardTile"></div>
+      </div>
+      <div id="buttonContainer">
+        <button class="button" type="button" id="start">Start</button>
+        <button class="button" type="button" id="reset">Reset</button>
+      </div>
+    </div>
+
+    <script type="text/javascript" src="library.js"></script>
+  </body>
 </html>
