--- a/index.html
+++ b/index.html
@@ -29,6 +29,6 @@
       </div>
     </div>
 
-    <script type="text/javascript" src="library.js"></script>
+    <script type="text/javascript" src="tictactoe.js"></script>
   </body>
 </html>
