Add event listeners to game tiles.

--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
         <div class="playerCard" id="player2">Player 2</div>
       </div>
       <div id="board">
-        <div id="tile1" class="boardTile"></div>
-        <div id="tile2" class="boardTile"></div>
-        <div id="tile3" class="boardTile"></div>
-        <div id="tile4" class="boardTile"></div>
-        <div id="tile5" class="boardTile"></div>
-        <div id="tile6" class="boardTile"></div>
-        <div id="tile7" class="boardTile"></div>
-        <div id="tile8" class="boardTile"></div>
-        <div id="tile9" class="boardTile"></div>
+        <div id="0" class="boardTile"></div>
+        <div id="1" class="boardTile"></div>
+        <div id="2" class="boardTile"></div>
+        <div id="3" class="boardTile"></div>
+        <div id="4" class="boardTile"></div>
+        <div id="5" class="boardTile"></div>
+        <div id="6" class="boardTile"></div>
+        <div id="7" class="boardTile"></div>
+        <div id="8" class="boardTile"></div>
       </div>
       <div id="buttonContainer">
         <button class="button" type="button" id="start">Start</button>
