--- a/index.html
+++ b/index.html
@@ -7,6 +7,31 @@
     <title>Tic-Tac-Toe</title>
   </head>
   <body>
+    <dialog id="newGameDialog">
+      <form method="dialog" id="newGameForm">
+        <label for="player1Name">Player 1 Name:</label>
+        <input
+          required
+          type="text"
+          id="player1Name"
+          name="player1Name"
+          placeholder="Conor"
+        />
+
+        <label for="player2Name">Player 2 Name:</label>
+        <input
+          required
+          type="text"
+          id="player2Name"
+          name="plyaer2Name"
+          placeholder="Conor"
+        />
+
+        <button id="submit" type="submit">Start</button>
+        <button id="cancel">Cancel</button>
+      </form>
+    </dialog>
+
     <div id="container">
       <div id="playerContainer">
         <div class="playerCard" id="player1">Player 1</div>
