Update player cards to display player names from form.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
           id="player1Name"
           name="player1Name"
           placeholder="Conor"
+          maxlength="12"
         />
 
         <label for="player2Name">Player 2 Name:</label>
@@ -25,10 +26,10 @@
           id="player2Name"
           name="plyaer2Name"
           placeholder="Conor"
+          maxlength="12"
         />
 
         <button id="submit" type="submit">Start</button>
-        <button id="cancel">Cancel</button>
       </form>
     </dialog>
 
