--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     </dialog>
 
     <div id="container">
+      <h1>Tic-Tac-Toe</h1>
       <div id="playerContainer">
         <div class="playerCard" id="player1">Player 1</div>
         <div class="playerCard" id="player2">Player 2</div>
